pkg/metrics/manifests/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: rte-metrics-service-cert
  labels:
    name: resource-topology
  name: numaresources-rte-metrics-service
spec:
  ports:
  - name: https
    port: 2112
    protocol: TCP
    targetPort: 2112
  selector:
    name: resource-topology
