pkg/metrics/manifests/yaml/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-to-rte-metrics
spec:
  podSelector:
    matchLabels:
      name: resource-topology
  ingress:
    - ports:
        - protocol: TCP
          port: metrics-port
  policyTypes:
    - Ingress
